[gd_scene load_steps=5 format=3 uid="uid://b47gfxy22e6n2"]

[ext_resource type="Theme" uid="uid://ddip2yriujj48" path="res://theme.tres" id="1_eqcgx"]
[ext_resource type="Script" path="res://combat_summary.gd" id="2_gi83k"]
[ext_resource type="Texture2D" uid="uid://cuxfb0gktab5d" path="res://my_assets/coffee.png" id="3_8l2ao"]
[ext_resource type="Texture2D" uid="uid://bt6gg4cs87c6h" path="res://my_assets/heart.png" id="3_osu63"]

[node name="CombatSummary" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_eqcgx")
script = ExtResource("2_gi83k")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = -20.0
offset_right = 39.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "VictoryDefeatDraw"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DamageContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Damage" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/DamageContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Damage"

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/DamageContainer"]
layout_mode = 2
texture = ExtResource("3_osu63")
expand_mode = 2

[node name="DamageLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/DamageContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "-2"
horizontal_alignment = 2

[node name="RewardContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/RewardContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reward"

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/RewardContainer"]
layout_mode = 2
texture = ExtResource("3_8l2ao")
expand_mode = 2

[node name="RewardLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/RewardContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "999"
horizontal_alignment = 2

[node name="IncomeContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/IncomeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Income"

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/IncomeContainer"]
layout_mode = 2
texture = ExtResource("3_8l2ao")
expand_mode = 2

[node name="IncomeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/IncomeContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "999"
horizontal_alignment = 2

[node name="InterestContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/InterestContainer"]
layout_mode = 2
text = "Interest ("

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/InterestContainer"]
layout_mode = 2
texture = ExtResource("3_8l2ao")
expand_mode = 2

[node name="InterestInfo" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/InterestContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "1 per 5, max 5)"

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/InterestContainer"]
layout_mode = 2
texture = ExtResource("3_8l2ao")
expand_mode = 2

[node name="InterestLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/InterestContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1"
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
